Вносит правки после рефакторинга
