# openapi/openapi.yaml
@@ -111,7 +111,15 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/User'
+                type: array
+                items:
+                  $ref: '#/components/schemas/Task'
+        '404':
+          description: User with tasks not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/MsgResponse"
   /api/users:
     get:
       summary: Get all users
@@ -228,10 +236,6 @@ components:
           type: string
         password:
           type: string
-        tasks:
-          type: array
-          items:
-            $ref: '#/components/schemas/Task'
     MsgResponse:
       type: object
       properties:
